<resources>
    <string name="app_name">SMDProjectFinal</string>
    <string name="add_subevent">Add subevent</string>
    <string name="assign_subevent">assign subevent</string>
    <string name="view_registrations">view registrations</string>
    <string name="add_oc">Add OC</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="mxmscs">Add OC</string>
    <string name="rolln_o">RollN.o</string>
    <string name="amsmk">Roll Number</string>
    <string name="create_subevent">Create SubEvent</string>
    <string name="view_registration">View Registration</string>
    <string name="wwew">Add Oc</string>
    <string name="register_subevent">Register Subevent</string>
    <string name="upload">Upload</string>
    <string name="register_event">Register Event</string>
    <string name="tyktky">Add</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="oc_login">OC Login</string>
    <string name="button">Button</string>
    <string name="emkrekre">Username</string>
    <string name="wekwk">Password</string>
    <string name="view_message_from_mentor">View Message From Mentor</string>
    <string name="view_participants">View Participants</string>
    <string name="set_venue">Set Venue</string>
    <string name="send_message">Send Message</string>
    <string name="set_score">Set Score</string>
    <string name="message_from_mentor">Message From Mentor</string>
    <string name="mentor_message">Mentor Message</string>
    <string name="back">Back</string>
    <string name="pdsdsd">Backk</string>
    <string name="ekmwkw">TextView</string>
    <string name="wlwmwem">Set Venue</string>
    <string name="time">Time</string>
    <string name="sss">Time</string>
    <string name="aas">Place</string>
    <string name="place">Place</string>
    <string name="set">Set</string>
    <string name="eeerer">Back</string>
    <string name="send_a_message">Send a Message</string>
    <string name="send">Send</string>
    <string name="enter_your_message_here">Enter Your Message Here...</string>
    <string name="backkkk">backkkk</string>
    <string name="ksksd">ksksd</string>
    <string name="sdsdd">sdsdd</string>
    <string name="sdssdsdsd">sdssdsdsd</string>
    <string name="score">Score</string>
    <string name="lmkm">Score</string>
    <string name="kknk">Name</string>
    <string name="sdsdsd">Name</string>
    <string name="asasasasasas">Winner</string>
    <string name="skdksds">Set Scores</string>
    <string name="qqqq">Button</string>
    <string name="runnerup">RunnerUp</string>
    <string name="ssasas">Name</string>
    <string name="llllaaaa">TextView</string>
    <string name="asaas">TextView</string>
    <string name="aaaaaaaaa">score</string>
    <string name="kkkkkkkkk">Score</string>
    <string name="aaaa">aaaa</string>
    <string name="amksaks">Set</string>
    <string name="ssmdsmds">Back</string>
    <string name="alalla">Name</string>
    <string name="kaka">Score</string>
    <string name="gggggg">Name</string>
    <string name="ffffff">Score</string>
    <string name="baaack">baaack</string>
    <string name="login">Login</string>
    <string name="dd">Password</string>
    <string name="lslsdls">Login</string>
    <string name="llllll">Username</string>
    <string name="lmk">Username</string>
    <string name="kkk">Password</string>
    <string name="ajasj">Login</string>
    <string name="kasajks">TODO</string>
</resources>