<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OC.Menu">

    <Button
        android:id="@+id/msg"
        android:onClick="MentorMessage"
        android:layout_width="179dp"
        android:layout_height="68dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="150dp"
        android:text="@string/message_from_mentor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/part"
        android:layout_width="181dp"
        android:layout_height="78dp"
        android:onClick="DiplayingParticipants"
        android:layout_marginStart="131dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="150dp"
        android:text="@string/view_participants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg" />

    <Button
        android:id="@+id/venue"
        android:layout_width="185dp"
        android:layout_height="77dp"
        android:layout_marginStart="125dp"
        android:onClick="setVenue"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="157dp"
        android:text="@string/set_venue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/part" />

    <Button
        android:id="@+id/score"
        android:layout_width="187dp"
        android:layout_height="73dp"
        android:onClick="scoring"
        android:layout_marginStart="125dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="157dp"
        android:text="@string/set_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send" />

    <Button
        android:id="@+id/send"
        android:layout_width="174dp"
        android:layout_height="73dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="52dp"
        android:onClick="SendMessage"
        android:layout_marginEnd="157dp"
        android:text="@string/send_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venue" />
</androidx.constraintlayout.widget.ConstraintLayout>