<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#f7f7f7"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="223dp"
        android:layout_height="131dp"
        android:layout_gravity="center"
        android:layout_marginStart="85dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="85dp"
        android:background="#FFFFFF"
        android:backgroundTint="#f7f7f7"
        android:contentDescription="@string/kasajks"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="279dp"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:layout_marginStart="57dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="57dp"
        android:elegantTextHeight="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/lslsdls"
        android:textColor="#FF5722"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
        android:drawableStart="@drawable/icons8_lock_landscape_60"
        android:drawableTint="#FF5722"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/kkk"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="424dp"
        android:text="@string/dd"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/pass"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:drawableStart="@drawable/icons8_user_50"
        android:drawableTint="#FF5722"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/lmk"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:text="@string/llllll"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/user"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="241dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:layout_marginStart="76dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/border"
        android:text="@string/ajasj"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>